package com.baoge.designpattern.yuanze.dimite.install.v2;

public class InstallSoftware {
    public void installWizard(Wizard wizard) {
        wizard.installWizard();
    }
}
