package com.baoge.designpattern.yuanze.dimite.v1;

import java.util.List;

public class GroupLeader {
    //  清点数量
    public void countGirls(List<Girl> girlList){
        System.out.println("女神数量为："+girlList.size());
    }
}
