package com.baoge.designpattern.yuanze.dimite.v2;

public class Girl {
}
