package com.baoge.designpattern.yuanze.dimite.v2;



public class Teacher {
    //老师发布清点v女生命令
    public void commond(GroupLeader leader){
        leader.countGirls();
    }
}
