package com.baoge.designpattern.yuanze.kaibi;

public interface IBook {
    public String getName();
    public int getPrice();
    public String getAuthor();
}
