@startuml

title __SOFTWAREARCHITECTURE.DESIGNPATTERN's Class Diagram__\n

  namespace com.baoge.designpattern {
    class com.baoge.designpattern.MainActivity {
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.danyi.demo1_imageloader.v1 {
      class com.baoge.designpattern.yuanze.danyi.demo1_imageloader.v1.ImageLoader {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.danyi.demo1_imageloader.v2 {
      class com.baoge.designpattern.yuanze.danyi.demo1_imageloader.v2.ImageCache {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.danyi.demo1_imageloader.v2 {
      class com.baoge.designpattern.yuanze.danyi.demo1_imageloader.v2.ImageLoader {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v1 {
      class com.baoge.designpattern.yuanze.dimite.install.v1.InstallSoftware {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v1 {
      class com.baoge.designpattern.yuanze.dimite.install.v1.Test {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v1 {
      class com.baoge.designpattern.yuanze.dimite.install.v1.Wizard {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v2 {
      class com.baoge.designpattern.yuanze.dimite.install.v2.InstallSoftware {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v2 {
      class com.baoge.designpattern.yuanze.dimite.install.v2.Test {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.install.v2 {
      class com.baoge.designpattern.yuanze.dimite.install.v2.Wizard {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v1 {
      class com.baoge.designpattern.yuanze.dimite.v1.Girl {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v1 {
      class com.baoge.designpattern.yuanze.dimite.v1.GroupLeader {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v1 {
      class com.baoge.designpattern.yuanze.dimite.v1.Teacher {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v1 {
      class com.baoge.designpattern.yuanze.dimite.v1.Test {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v2 {
      class com.baoge.designpattern.yuanze.dimite.v2.Girl {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v2 {
      class com.baoge.designpattern.yuanze.dimite.v2.GroupLeader {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v2 {
      class com.baoge.designpattern.yuanze.dimite.v2.Teacher {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.dimite.v2 {
      class com.baoge.designpattern.yuanze.dimite.v2.Test {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.jiekougeli {
      class com.baoge.designpattern.yuanze.jiekougeli.CloseUtil {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.kaibi {
      interface com.baoge.designpattern.yuanze.kaibi.IBook {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.kaibi {
      class com.baoge.designpattern.yuanze.kaibi.NovelBook {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.kaibi {
      class com.baoge.designpattern.yuanze.kaibi.OffNovelBook {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo1 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo1.Father {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo1 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo1.Son {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo1 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo1.Test {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo2 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo2.Father {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo2 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo2.Son {
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace yuanze.lishitihuan.demo2 {
      class com.baoge.designpattern.yuanze.lishitihuan.demo2.Test {
      }
    }
  }
  

  com.baoge.designpattern.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.baoge.designpattern.yuanze.danyi.demo1_imageloader.v2.ImageLoader o-- com.baoge.designpattern.yuanze.danyi.demo1_imageloader.v2.ImageCache : imageCache
  com.baoge.designpattern.yuanze.kaibi.NovelBook .up.|> com.baoge.designpattern.yuanze.kaibi.IBook
  com.baoge.designpattern.yuanze.kaibi.OffNovelBook -up-|> com.baoge.designpattern.yuanze.kaibi.NovelBook
  com.baoge.designpattern.yuanze.lishitihuan.demo1.Son -up-|> com.baoge.designpattern.yuanze.lishitihuan.demo1.Father
  com.baoge.designpattern.yuanze.lishitihuan.demo2.Son -up-|> com.baoge.designpattern.yuanze.lishitihuan.demo2.Father


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
